Update code for compatibility with PHP 8.2 and Laravel 10

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,7 +12,7 @@
     verbose="true"
 >
     <testsuites>
-        <testsuite name="ViicSlen Test Suite">
+        <testsuite name="Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
