--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "nunomaduro/collision": "^7.0",
         "nunomaduro/larastan": "^2.0.1",
         "orchestra/canvas": "^8.1",
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "^8.10",
         "pestphp/pest": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
         "pestphp/pest-plugin-mock": "^2.0",
@@ -42,7 +42,10 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "ViicSlen\\TrackableTasks\\Tests\\": "tests"
+            "ViicSlen\\TrackableTasks\\Tests\\": "tests",
+            "Workbench\\App\\": "workbench/app/",
+            "Workbench\\Database\\Factories\\": "workbench/database/factories/",
+            "Workbench\\Database\\Seeders\\": "workbench/database/seeders/"
         }
     },
     "scripts": {
@@ -51,6 +54,20 @@
         "test:coverage": [
             "@putenv XDEBUG_MODE=coverage",
             "vendor/bin/pest --coverage"
+        ],
+        "post-autoload-dump": [
+            "@clear",
+            "@prepare"
+        ],
+        "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
+        "prepare": "@php vendor/bin/testbench package:discover --ansi",
+        "build": "@php vendor/bin/testbench workbench:build --ansi",
+        "serve": [
+            "@build",
+            "@php vendor/bin/testbench serve"
+        ],
+        "lint": [
+            "@php vendor/bin/phpstan analyse"
         ]
     },
     "config": {
