--- a/composer.json
+++ b/composer.json
@@ -16,23 +16,19 @@
         }
     ],
     "require": {
-        "php": "^8.1|^8.2",
-        "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^10.0"
+        "php": "^8.2",
+        "spatie/laravel-package-tools": "^1.19.0",
+        "illuminate/contracts": "^10.0|^11.16"
     },
     "require-dev": {
-        "nunomaduro/collision": "^7.10",
-        "nunomaduro/larastan": "^2.7.0",
-        "orchestra/canvas": "^8.11.4",
-        "orchestra/testbench": "^8.17.0",
-        "pestphp/pest": "^2.28",
-        "pestphp/pest-plugin-laravel": "^2.2",
-        "pestphp/pest-plugin-mock": "^2.0",
-        "phpstan/extension-installer": "^1.3.1",
-        "phpstan/phpstan-deprecation-rules": "^1.1.4",
-        "phpstan/phpstan-phpunit": "^1.3.15",
+        "nunomaduro/collision": "^8.6.1",
+        "nunomaduro/larastan": "^3.1",
+        "orchestra/canvas": ">=9.2.2",
+        "orchestra/testbench": "^9.11",
+        "pestphp/pest": "^3.7.4",
+        "pestphp/pest-plugin-laravel": "^3.1",
         "roave/security-advisories": "dev-latest",
-        "spatie/laravel-ray": "^1.33"
+        "spatie/laravel-ray": "^1.39.1"
     },
     "autoload": {
         "psr-4": {
