--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
         }
     ],
     "require": {
-        "php": "^8.2",
+        "php": ">=8.2",
         "spatie/laravel-package-tools": "^1.19.0",
         "illuminate/contracts": "^10.0|^11.16"
     },
     "require-dev": {
+        "laravel/pint": "^1.21",
         "nunomaduro/collision": "^8.6.1",
         "nunomaduro/larastan": "^3.1",
         "orchestra/canvas": ">=9.2.2",
